kubernetes/apps/argocd/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    external-dns.kubernetes.io/target: infra-int
spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`argocd.sobrinho.pt`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: http
    - match: Host(`argocd.sobrinho.pt`) && Header(`Content-Type`, `application/grpc`)
      kind: Rule
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    secretName: argocd-cert
